--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
 
 dev_dependencies:
   flutter_test:
