new ignore test2

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,7 @@
 #This is a testline
 #Thisis test line2
 #Thisis test line3
+#Thisis test line4
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
